--- a/Assets/Beamable/Autogenerated/Microservices/Unity.Beamable.Customer.MicroserviceClients.asmdef
+++ b/Assets/Beamable/Autogenerated/Microservices/Unity.Beamable.Customer.MicroserviceClients.asmdef
@@ -5,7 +5,9 @@
     "Unity.Beamable.Runtime.Common",
     "Unity.Beamable.Server.Runtime",
     "Unity.Beamable.Server.Runtime.Common",
-    "Unity.Beamable.Customer.Common"
+    "Unity.Beamable.Customer.Common",
+     "Beamable.Go4.Nfc.Common"
+     
   ],
   "name":"Unity.Beamable.Customer.MicroserviceClients",
   "autoReferenced":true
