--- a/Assets/Beamable/Microservices/GoPlay/Beamable.Microservice.GoPlay.asmdef
+++ b/Assets/Beamable/Microservices/GoPlay/Beamable.Microservice.GoPlay.asmdef
@@ -10,9 +10,9 @@
     "Unity.Beamable.Server.Runtime.Common",
     "Unity.Beamable.Server.Runtime.Mocks",
     "Unity.Beamable.Customer.Common",
-    "Beamable.Storage.PaymentStorage",
-    "Beamable.Go4.Nfc.Microservices",
-    "Beamable.Go4.Nfc.Common"
+    "Go4.Storage.PaymentStorage",
+    "Go4.Nfc.Microservices",
+    "Go4.Nfc.Common"
   ],
   "includePlatforms":[
      "Editor"
