--- a/Packages/com.beamable.go4.nfc/PaymentStorage/Beamable.Storage.PaymentStorage.asmdef
+++ b/Packages/com.beamable.go4.nfc/PaymentStorage/Beamable.Storage.PaymentStorage.asmdef
@@ -9,7 +9,7 @@
     "Unity.Beamable.Server.Runtime.Mocks",
     "Unity.Beamable.Customer.Common"
   ],
-  "name":"Beamable.Storage.PaymentStorage",
+  "name":"Go4.Storage.PaymentStorage",
   "autoReferenced":false,
   "precompiledReferences":[
      "DnsClient.dll",
