--- a/Packages/com.beamable.go4.nfc/Runtime/Go4.Nfc.Runtime.asmdef
+++ b/Packages/com.beamable.go4.nfc/Runtime/Go4.Nfc.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-	"name":"Beamable.Go4.Nfc.Runtime",
+	"name":"Go4.Nfc.Runtime",
 	"references":[
 		"Unity.Beamable.Runtime.Common",
 		"Beamable.Coroutines",
